added custom kit queue